[tool.poetry]
name = "portfolyo"
version = "0.6.0"
description = "Analyse and manipulate timeseries related to power and gas offtake portfolios"
authors = [
    "Ruud Wijtvliet <rwijtvliet@gmail.com>",
    "Sakshi Singh <sakshisingh1809@gmail.com>",
    "Alina Voilova <voilova.alina@gmail.com>",
]
license = "BSD-3"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "~2.0"       # pandas 2.1.0 doesn't play nice with pint-pandas. Update when new pint-pandas version is released (>0.5) 
matplotlib = "^3.7.2"
pint = "0.19.2"
pint-pandas = "0.4"
colorama = "^0.4.6"
holidays = "^0.32"
numpy = "^1.26.2"


[tool.poetry.group.test.dependencies]
codecov = "^2.1.13"
pytest = "^7.4.1"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
openpyxl = "^3.1.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
matplotlib = "^3.8.2"
numpydoc = "^1.6.0"
sphinx-copybutton = "^0.5.2"
sphinx-exec-code = "^0.12"
sphinx-rtd-theme = "^1.3.0"
insegel = "^1.3.1"
nbsphinx = "^0.9.3"
pandoc = "^2.3"
pip-tools = "^7.4.1"
IPython = "^8.23.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"
importlib-metadata = "^4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
