[tool.poetry]
name = "portfolyo"
version = "0.6.6"
description = "Analyse and manipulate timeseries related to power and gas offtake portfolios"
authors = [
    "Ruud Wijtvliet <rwijtvliet@gmail.com>",
    "Sakshi Singh <sakshisingh1809@gmail.com>",
    "Alina Voilova <voilova.alina@gmail.com>",
]
license = "BSD-3"
readme = "README.rst"
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
matplotlib = "^3.7.2"
pint = "^0.24"
pint-pandas = "0.6"
colorama = "^0.4.6"
numpy = "^1.26.2"
tomli = "^2.0"


[tool.poetry.group.test.dependencies]
codecov = "^2.1.13"
pytest = "^7.4.1"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
openpyxl = "^3.1.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
matplotlib = "^3.8.2"
numpydoc = "^1.6.0"
sphinx-copybutton = "^0.5.2"
sphinx-exec-code = "^0.12"
sphinx-rtd-theme = "^1.3.0"
insegel = "^1.3.1"
nbsphinx = "^0.9.3"
pandoc = "^2.3"
pip-tools = "^7.4.1"
IPython = "^8.23.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^23.7.0"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"
importlib-metadata = "^4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "only_on_pr: marks tests as slow (select with -m only_on_pr and deselect with -m 'not only_on_pr')",
]
pythonpath = ["./tests"]


[tool.black]
line-length = 88


[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"] # Equivalent to flake8's built-in codes
lint.ignore = [
    "E501",
    "E202",
    "E226",
] # Ignored codes (e.g., for long lines or line breaks before binary operators)
exclude = ["__init__.py", "versioneer.py", "_version.py", ".venv/"]


[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]


